# spec-kit

./: .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.devcontainer/: devcontainer.json  post-create.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  security-audit-requirements.txt
.github/ISSUE_TEMPLATE/: agent_request.yml  bug_report.yml  bundle_submission.yml  extension_submission.yml  feature_request.yml  preset_submission.yml
.github/scripts/: check_security_requirements.py
.github/workflows/: add-community-bundle.lock.yml  add-community-bundle.md  add-community-extension.lock.yml  add-community-preset.lock.yml  bug-assess.lock.yml  bug-fix.lock.yml  bug-fix.md  bug-test.lock.yml  bug-test.md  catalog-assign.yml  codeql.yml  docs.yml  lint.yml  publish-pypi.yml  security.yml  stale.yml  test.yml
bundles/: catalog.community.json
docs/: index.md  installation.md  local-development.md  quickstart.md  toc.yml  upgrade.md
docs/community/: bundles.md  extensions.md  friends.md  overview.md  presets.md
docs/concepts/: complex-features.md  spec-of-specs.md
docs/guides/: evolving-specs.md  monorepo.md
docs/install/: one-time.md  pipx.md  pypi.md
docs/reference/: agentic-bugfix.md  agentic-sdd.md  bundles.md  core.md  extensions.md  integrations.md  overview.md  workflows.md
extensions/: EXTENSION-DEVELOPMENT-GUIDE.md  catalog.community.json  catalog.json
extensions/agent-context/: README.md  agent-context-config.yml  agent-context-defaults.json
extensions/assess/: README.md  extension.yml
extensions/git/: README.md  config-template.yml  extension.yml  git-config.yml
integrations/: catalog.json
newsletters/: 2026-June.md  2026-March.md
presets/: ARCHITECTURE.md  catalog.community.json
presets/self-test/: preset.yml
templates/: checklist-template.md  plan-template.md
tests/: conftest.py  http_helpers.py  parity_helpers.py  self_upgrade_helpers.py  test_agent_config_consistency.py  test_authentication.py  test_check_prerequisites_paths_only.py  test_check_prerequisites_python_parity.py  test_command_template_py_scripts.py  test_commands_package.py  test_create_new_feature_python_parity.py  test_download_security.py  test_extension_registration.py  test_extension_skills.py  test_extension_update_hardening.py  test_extensions.py  test_github_http.py  test_github_workflows.py  test_init_dir_cli.py  test_merge.py  test_post_process.py  test_presets.py  test_security_workflow.py  test_self_upgrade_detection.py  test_self_upgrade_execution.py  test_self_upgrade_guidance.py  test_self_upgrade_verification.py  test_setup_plan_feature_json.py  test_setup_plan_no_overwrite.py  test_setup_plan_python_parity.py  test_setup_tasks.py  test_setup_tasks_python_parity.py  test_skill_placeholder_py.py  test_specify_template_numbering.py  test_timestamp_branches.py  test_upgrade.py  test_workflow_run_without_project.py  test_workflows.py
workflows/: README.md  catalog.community.json
(+238 files in other folders)
